# cirdan

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  cirdan.spec  cirdan.yaml.example  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  release-npm.yml  release.yml
cirdan/: __init__.py  audit.py  config.py  engine.py  enrich.py  query.py  update_check.py  util.py
cirdan/access/: __init__.py  context.py  redaction.py
cirdan/actions/: __init__.py  executor.py
cirdan/adapters/: __init__.py  aws.py  base.py  common.py  docker.py  docker_compose.py  github_actions.py  helm.py  k8s_manifests.py  kubernetes.py  local_files.py  nginx.py  prometheus.py  registry.py  sql_schema.py  systemd.py  systemd_units.py  terraform.py
cirdan/agents/: __init__.py  installer.py
cirdan/api/: http.py
cirdan/cli/: main.py  setup_flow.py
cirdan/daemon/: __init__.py  lock.py  server.py
cirdan/fingerprint/: __init__.py  engine.py
cirdan/graph/: __init__.py  builder.py  communities.py  contrib.py  diff.py  export.py  queries.py  schema.py  store.py
cirdan/incidents/: __init__.py  detector.py  reports.py  responder.py  store.py
cirdan/mcp/: server.py
cirdan/reports/: __init__.py  infra_report.py
cirdan/telemetry/: __init__.py  clusters.py  events.py
cirdan/ui/: __init__.py  render.py  router.py  view_spec.py
cirdan/ui/templates/: view.html.j2
cirdan/verify/: __init__.py  checks.py
examples/demo/: .mcp.json  AGENTS.md  README.md  cirdan.yaml  docker-compose.yml  nginx.conf
examples/demo/.claude/skills/cirdan/: SKILL.md
npm/cli/: README.md  install-check.js  package.json
packaging/: README.md  install.ps1  install.sh  pyi_entry.py
packaging/homebrew/: cirdan.rb
tests/: conftest.py  test_actions.py  test_api.py  test_cli_surface.py  test_communities.py  test_contrib.py  test_daemon.py  test_daemon_lock.py  test_enrich.py  test_fingerprint.py  test_first_run.py  test_graph.py  test_incidents.py  test_installer.py  test_live_adapters.py  test_mcp.py  test_query_and_views.py  test_redaction.py  test_responder.py  test_setup_flow.py  test_static_adapters.py  test_system_scope.py  test_update_check.py
tests/fixtures/fake-bin/: docker  kubectl
tests/fixtures/repos/compose-app/: Dockerfile  README.md  docker-compose.yml  schema.sql
tests/fixtures/repos/compose-app/.github/workflows/: ci.yml
tests/fixtures/repos/k8s-aws-app/: main.tf
tests/fixtures/repos/k8s-aws-app/charts/myapp/: Chart.yaml
tests/fixtures/repos/k8s-aws-app/k8s/: checkout.yaml
